--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shahrukh portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section id="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="red-color">Shahrukh Khan's</span> world!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet laborum distinctio ex explicabo aperiam
+                cupiditate hic nobis, officia saepe deleniti.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/shahrukh-khan-074088220/">Hire
+                me</a>
+
+
+        </div>
+        <div class="half-width">
+            <img src="images/Shahrukh.jpg" alt="" id="img1">
+        </div>
+    </section>
+
+
+
+
 </body>
+
 </html>
