--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
             <img src="images/Shahrukh.jpg" alt="" id="img1">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width"><img src="images/shahrukh2.jpg" alt=""></div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h5>Become a web developer</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus doloremque repellat placeat nihil
+                quasi, maiores voluptate laudantium maxime, veritatis autem nesciunt, beatae similique praesentium
+                dolorum.</p>
+                <a class="link-button" target="blank" href="https://www.linkedin.com/in/shahrukh-khan-074088220/">Download
+                    resume</a>
+
+        </div>
+
+
+
+    </section>
 
 
 
