--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section id="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="red-color">Shahrukh Khan's</span> world!</h1>
@@ -28,7 +28,7 @@
             <img src="images/Shahrukh.jpg" alt="" id="img1">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width"><img src="images/shahrukh2.jpg" alt=""></div>
         <div class="half-width">
             <h2>Dream Big</h2>
@@ -36,8 +36,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus doloremque repellat placeat nihil
                 quasi, maiores voluptate laudantium maxime, veritatis autem nesciunt, beatae similique praesentium
                 dolorum.</p>
-                <a class="link-button" target="blank" href="https://www.linkedin.com/in/shahrukh-khan-074088220/">Download
-                    resume</a>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/shahrukh-khan-074088220/">Download
+                resume</a>
 
         </div>
 
@@ -45,6 +45,35 @@
 
     </section>
 
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width exp">
+
+                <h1>Full stack developer</h1>
+                <h4 class="red-color">2022-Present | Pro level developer
+                </h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis temporibus dicta
+                    eveniet
+                    voluptate ratione beatae dignissimos cupiditate omnis id!</p>
+
+            </div>
+            <div id="exp1" class="half-width exp">
+                <h1>Newbie web developer</h1>
+                <h4 class="red-color">2022-2024 | Pro level Developer</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nisi quibusdam fugit debitis
+                    recusandae,
+                    eveniet cum dolor accusamus, corporis repellendus laboriosam ex voluptates inventore voluptate!</p>
+
+
+
+            </div>
+        </div>
+
+
+
+
+    </section>
 
 
 
